<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/exit_bg">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@drawable/exit_item1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:textColor="#000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/are_you_sure_want_to_exit"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:textColor="#000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/tv_exit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/yes"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20dp"
                android:background="@drawable/exit_item_left" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/tv_no"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/no"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20dp"
                android:background="@drawable/exit_item_right"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>