<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:elevation="4dp">
        <ImageView
            android:id="@+id/iv_back_setting"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/back"
            android:padding="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/setting"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="#ff333333"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_clear"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@drawable/setting_item_color"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/clear_cache"
            android:textColor="#ff333333"
            android:gravity="center"
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            android:textStyle="normal"/>

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/clear"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@drawable/setting_item_color"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/trendy_cool_wallpaper"
                android:textColor="#ff333333"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_version_v1_0"
                android:textColor="#ff999999"
                android:textSize="12dp"
                android:layout_marginLeft="10dp"
                android:textStyle="normal"/>
        </LinearLayout>


    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="100dp"/>
</LinearLayout>